--- a/python/example_json.ipynb
+++ b/python/example_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,8 +68,8 @@
      "output_type": "stream",
      "text": [
       "kcat reverse comparison:\n",
-      "from JSON:   [ 97.6   7.2 138.1]\n",
-      "calculated:  [97.6  7.2  0.1]\n"
+      "from JSON:   [ 97.63997955   7.22089052 138.1141783 ]\n",
+      "calculated:  [97.62328423  7.22549632  0.13809478]\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,13 +92,13 @@
      "text": [
       "enzyme concentration comparison:\n",
       "from JSON:  \n",
-      " [[1.7e-06 1.6e-06 5.0e-07 4.4e-07]\n",
-      " [1.4e-06 3.3e-06 1.4e-06 1.4e-06]\n",
-      " [9.4e-07 3.5e-07 1.3e-06 1.2e-06]]\n",
+      " [[1.74991311e-06 1.58257659e-06 5.01929073e-07 4.41456915e-07]\n",
+      " [1.44387710e-06 3.31349350e-06 1.36297300e-06 1.43373983e-06]\n",
+      " [9.39168869e-07 3.45175677e-07 1.29820842e-06 1.23089965e-06]]\n",
       "calculated: \n",
-      " [[1.7e-06 1.6e-06 5.0e-07 4.4e-07]\n",
-      " [1.4e-06 3.3e-06 1.4e-06 1.4e-06]\n",
-      " [5.6e-07 3.2e-07 3.5e-07 2.7e-07]]\n"
+      " [[1.74820954e-06 1.58036686e-06 5.01694593e-07 4.41213742e-07]\n",
+      " [1.44394132e-06 3.31662521e-06 1.36332578e-06 1.43442925e-06]\n",
+      " [5.60477585e-07 3.15586674e-07 3.52190652e-07 2.65729845e-07]]\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,8 +129,8 @@
       "Km = 0.0\n",
       "Ka = 0.0\n",
       "Ki = 0.0\n",
-      "CPU times: user 1.31 s, sys: 80.6 ms, total: 1.39 s\n",
-      "Wall time: 1.33 s\n"
+      "CPU times: user 1.2 s, sys: 113 ms, total: 1.31 s\n",
+      "Wall time: 1.3 s\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +170,8 @@
       "Km = 23.23\n",
       "Ka = 0.0\n",
       "Ki = 0.0\n",
-      "CPU times: user 1.31 s, sys: 85.5 ms, total: 1.39 s\n",
-      "Wall time: 1.33 s\n"
+      "CPU times: user 1.22 s, sys: 67.3 ms, total: 1.29 s\n",
+      "Wall time: 1.25 s\n"
      ]
     }
    ],
@@ -187,26 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v = mb.fluxes\n",
-    "c = Q_(np.exp(mb.ln_conc_met.value), \"M\")\n",
-    "e = Q_(np.exp(mb.ln_conc_enz.value), \"M\")\n",
-    "g = Q_(-mb.driving_forces.value, \"kJ/mol\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "!!!SBtab DocumentName='state_results' SBtabVersion='1.0' Date='2021-4-2'\n",
+      "!!!SBtab DocumentName='balanced_states' SBtabVersion='1.0' Date='2021-4-4'\n",
       "!!SBtab TableID='MetabolicFlux' TableType='QuantityMatrix' TableName='MetabolicFlux' SBtabVersion='1.0' Unit='mM/s'\n",
       "!QuantityType\t!Reaction\tS1\tS2\tS3\tS4\n",
       "rate of reaction\tE1\t0.021387373764911267\t0.01460085302465973\t0.011737199044558173\t0.009199216810779395\n",
@@ -221,25 +209,52 @@
       "concentration\tX4\t0.7973102897016721\t0.7079450606200159\t0.9062532262737979\t1.6103653403747005\n",
       "\n",
       "!!SBtab TableID='EnzymeConcentrations' TableType='QuantityMatrix' TableName='Enzyme concentrations' SBtabVersion='1.0' Unit='mM'\n",
-      "!QuantityType\t!Compound\tS1\tS2\tS3\tS4\n",
+      "!QuantityType\t!Reaction\tS1\tS2\tS3\tS4\n",
       "concentration of enzyme\tE1\t0.0017481883921990488\t0.0015805239586383216\t0.0005016780227488157\t0.00044120223604224616\n",
       "concentration of enzyme\tE2\t0.0014437261991103465\t0.003313562246626576\t0.0013629381026052689\t0.001433748401756284\n",
       "concentration of enzyme\tE3\t0.00011643200933689904\t7.563289940988996e-05\t6.548284155579942e-05\t5.0507094491179566e-05\n",
       "\n",
       "!!SBtab TableID='ReactionGibbsFreeEnergy' TableType='QuantityMatrix' TableName='Gibbs free energies of reaction' SBtabVersion='1.0' Unit='kJ/mol'\n",
-      "!QuantityType\t!Compound\tS1\tS2\tS3\tS4\n",
+      "!QuantityType\t!Reaction\tS1\tS2\tS3\tS4\n",
       "Gibbs energy of reaction\tE1\t-0.7404894163982689\t-0.5165462806212577\t-2.305080317224486\t-1.7222374964821086\n",
       "Gibbs energy of reaction\tE2\t-1.1722560805322493\t-0.48645538381991305\t-0.8456306442200594\t-0.6699852999437699\n",
       "Gibbs energy of reaction\tE3\t-6.434033287526614\t-7.98485814849266\t-5.842355893563589\t-5.769097490319845\n",
+      "\n",
+      "!!SBtab TableID='CatalyticRateConstant' TableType='QuantityMatrix' TableName='Catalytic rate constant' SBtabVersion='1.0' Unit='1/s'\n",
+      "!QuantityType\t!Reaction\tkcatf\tkcatr\n",
+      "catalytic rate constant\tE1\t26.95423717137073\t97.63666356396651\n",
+      "catalytic rate constant\tE2\t877.1127337849148\t7.222195761705887\n",
+      "catalytic rate constant\tE3\t190.99321091972476\t34.68791767082239\n",
+      "\n",
+      "!!SBtab TableID='MichaelisConstant' TableType='QuantityMatrix' TableName='Michaelis-Menten constant' SBtabVersion='1.0' Unit='mM'\n",
+      "!QuantityType\t!Reaction\tS1\tS2\tS3\tS4\n",
+      "Michaelis constant\tE1\t0.13323827253461432\t0.025395450377093568\t1000.0000000000001\t1000.0000000000001\n",
+      "Michaelis constant\tE2\t1000.0000000000001\t0.36243680911922593\t0.06766160423616625\t1000.0000000000001\n",
+      "Michaelis constant\tE3\t1000.0000000000001\t1000.0000000000001\t0.03285346132470942\t2.6371519587288907\n",
+      "\n",
+      "!!SBtab TableID='ActivationConstant' TableType='QuantityMatrix' TableName='Activation constant' SBtabVersion='1.0' Unit='mM'\n",
+      "!QuantityType\t!Reaction\tS1\tS2\tS3\tS4\n",
+      "activation constant\tE1\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\n",
+      "activation constant\tE2\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\n",
+      "activation constant\tE3\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\n",
+      "\n",
+      "!!SBtab TableID='InhibitionConstant' TableType='QuantityMatrix' TableName='Inhibition constant' SBtabVersion='1.0' Unit='mM'\n",
+      "!QuantityType\t!Reaction\tS1\tS2\tS3\tS4\n",
+      "inhibition constant\tE1\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\n",
+      "inhibition constant\tE2\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\n",
+      "inhibition constant\tE3\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\t1000.0000000000001\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "sbtabdoc = SBtab.SBtabDocument(name=\"state_results\")\n",
+    "sbtabdoc = SBtab.SBtabDocument(name=\"balanced_states\")\n",
     "\n",
-    "flux_df = pd.DataFrame(v.m_as(\"mM/s\"), columns=[\"S1\", \"S2\", \"S3\", \"S4\"])\n",
+    "flux_df = pd.DataFrame(\n",
+    "    mb.fluxes.m_as(\"mM/s\"),\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
     "flux_df.insert(0, \"!QuantityType\", \"rate of reaction\")\n",
     "flux_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
     "flux_sbtab = SBtab.SBtabTable.from_data_frame(\n",
@@ -251,7 +266,11 @@
     ")\n",
     "sbtabdoc.add_sbtab(flux_sbtab)\n",
     "\n",
-    "conc_met_df = pd.DataFrame(c.m_as(\"mM\"), columns=[\"S1\", \"S2\", \"S3\", \"S4\"])\n",
+    "c = Q_(np.exp(mb.ln_conc_met.value), \"M\")\n",
+    "conc_met_df = pd.DataFrame(\n",
+    "    c.m_as(\"mM\"),\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
     "conc_met_df.insert(0, \"!QuantityType\", \"concentration\")\n",
     "conc_met_df.insert(1, \"!Compound\", [\"X1\", \"S2\", \"X3\", \"X4\"])\n",
     "conc_met_sbtab = SBtab.SBtabTable.from_data_frame(\n",
@@ -263,9 +282,13 @@
     ")\n",
     "sbtabdoc.add_sbtab(conc_met_sbtab)\n",
     "\n",
-    "conc_enz_df = pd.DataFrame(e.m_as(\"mM\"), columns=[\"S1\", \"S2\", \"S3\", \"S4\"])\n",
+    "e = Q_(np.exp(mb.ln_conc_enz.value), \"M\")\n",
+    "conc_enz_df = pd.DataFrame(\n",
+    "    e.m_as(\"mM\"),\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
     "conc_enz_df.insert(0, \"!QuantityType\", \"concentration of enzyme\")\n",
-    "conc_enz_df.insert(1, \"!Compound\", [\"E1\", \"E2\", \"E3\"])\n",
+    "conc_enz_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
     "conc_enz_sbtab = SBtab.SBtabTable.from_data_frame(\n",
     "    conc_enz_df.astype(str),\n",
     "    table_id=\"EnzymeConcentrations\",\n",
@@ -275,9 +298,12 @@
     ")\n",
     "sbtabdoc.add_sbtab(conc_enz_sbtab)\n",
     "\n",
-    "gibbs_energy_df = pd.DataFrame(g.m_as(\"kJ/mol\"), columns=[\"S1\", \"S2\", \"S3\", \"S4\"])\n",
+    "gibbs_energy_df = pd.DataFrame(\n",
+    "    -mb.driving_forces.value,\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
     "gibbs_energy_df.insert(0, \"!QuantityType\", \"Gibbs energy of reaction\")\n",
-    "gibbs_energy_df.insert(1, \"!Compound\", [\"E1\", \"E2\", \"E3\"])\n",
+    "gibbs_energy_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
     "gibbs_energy_sbtab = SBtab.SBtabTable.from_data_frame(\n",
     "    gibbs_energy_df.astype(str),\n",
     "    table_id=\"ReactionGibbsFreeEnergy\",\n",
@@ -287,8 +313,74 @@
     ")\n",
     "sbtabdoc.add_sbtab(gibbs_energy_sbtab)\n",
     "\n",
+    "kcatf = Q_(np.exp(mb.ln_kcatf.value), \"1/s\")\n",
+    "kcatr = Q_(np.exp(mb.ln_kcatr.value), \"1/s\")\n",
+    "kcat_df = pd.DataFrame(\n",
+    "    np.vstack([kcatf.m_as(\"1/s\"), kcatr.m_as(\"1/s\")]).T,\n",
+    "    columns=[\"kcatf\", \"kcatr\"]\n",
+    ")\n",
+    "kcat_df.insert(0, \"!QuantityType\", \"catalytic rate constant\")\n",
+    "kcat_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
+    "kcat_sbtab = SBtab.SBtabTable.from_data_frame(\n",
+    "    kcat_df.astype(str),\n",
+    "    table_id=\"CatalyticRateConstant\",\n",
+    "    table_name=\"Catalytic rate constant\",\n",
+    "    table_type=\"QuantityMatrix\",\n",
+    "    unit=\"1/s\",\n",
+    ")\n",
+    "sbtabdoc.add_sbtab(kcat_sbtab)\n",
+    "\n",
+    "Km = Q_(np.exp(mb._create_dense_matrix(mb.S, mb.ln_Km).value), \"M\")\n",
+    "Km_df = pd.DataFrame(\n",
+    "    Km.m_as(\"mM\").T,\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
+    "Km_df.insert(0, \"!QuantityType\", \"Michaelis constant\")\n",
+    "Km_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
+    "Km_sbtab = SBtab.SBtabTable.from_data_frame(\n",
+    "    Km_df.astype(str),\n",
+    "    table_id=\"MichaelisConstant\",\n",
+    "    table_name=\"Michaelis-Menten constant\",\n",
+    "    table_type=\"QuantityMatrix\",\n",
+    "    unit=\"mM\",\n",
+    ")\n",
+    "sbtabdoc.add_sbtab(Km_sbtab)\n",
+    "\n",
+    "Ka = Q_(np.exp(mb._create_dense_matrix(mb.S, mb.ln_Ka)), \"M\")\n",
+    "Ka_df = pd.DataFrame(\n",
+    "    Ka.m_as(\"mM\").T,\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
+    "Ka_df.insert(0, \"!QuantityType\", \"activation constant\")\n",
+    "Ka_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
+    "Ka_sbtab = SBtab.SBtabTable.from_data_frame(\n",
+    "    Ka_df.astype(str),\n",
+    "    table_id=\"ActivationConstant\",\n",
+    "    table_name=\"Activation constant\",\n",
+    "    table_type=\"QuantityMatrix\",\n",
+    "    unit=\"mM\",\n",
+    ")\n",
+    "sbtabdoc.add_sbtab(Ka_sbtab)\n",
+    "\n",
+    "Ki = Q_(np.exp(mb._create_dense_matrix(mb.S, mb.ln_Ki)), \"M\")\n",
+    "Ki_df = pd.DataFrame(\n",
+    "    Ki.m_as(\"mM\").T,\n",
+    "    columns=[\"S1\", \"S2\", \"S3\", \"S4\"]\n",
+    ")\n",
+    "Ki_df.insert(0, \"!QuantityType\", \"inhibition constant\")\n",
+    "Ki_df.insert(1, \"!Reaction\", [\"E1\", \"E2\", \"E3\"])\n",
+    "Ki_sbtab = SBtab.SBtabTable.from_data_frame(\n",
+    "    Ki_df.astype(str),\n",
+    "    table_id=\"InhibitionConstant\",\n",
+    "    table_name=\"Inhibition constant\",\n",
+    "    table_type=\"QuantityMatrix\",\n",
+    "    unit=\"mM\",\n",
+    ")\n",
+    "sbtabdoc.add_sbtab(Ki_sbtab)\n",
+    "\n",
+    "\n",
     "print(sbtabdoc.to_str())\n",
-    "sbtabdoc.write(\"state_results.tsv\");"
+    "sbtabdoc.write(\"balanced_states.tsv\");"
    ]
   },
   {
