Rerun all matlab calculations for fits with experimental data

--- a/resources/data/data-prior/README
+++ b/resources/data/data-prior/README
@@ -1,8 +1,13 @@
-replaced KM geometric std 20 -> 1000
-replaced KM max 1000 -> 10000
-replaced KM min 0.0000001 -> 0.0001
+replaced KM geometric std 20 -> 20 [gleich]
+replaced KM max 1000 -> 1000 [gleich]
+replaced KM min 0.0000001 -> 0.00001
 replaced Keq geom std 100 -> 1e8
 replaced concentration of enzyme geom mean 1 -> 0.001 (mM)
 replaced concentration geom mean 0.1 -> 0.3 (mM)
-replaced substrate catalytic rate constant min 0.01 -> 1
-replaced product catalytic rate constant min 0.01 -> 1
+replaced concentration min 10^-6 -> 10^-7 (mM)
+replaced substrate catalytic rate constant min 0.01 -> 0.1
+replaced product catalytic rate constant min 0.01 -> 0.05
+replaced substrate catalytic rate constant geom std 50 -> 20
+replaced product catalytic rate constant geom std 50 -> 20
+met concentration data geom std 1.2 -> 1.5
+enz concentration data geom std 1.2 -> 1.5
