--- a/docs/source/bibliography.bib
+++ b/docs/source/bibliography.bib
@@ -1,64 +1,19 @@
 
-@article{noor_integrated_2012,
-	title = {An integrated open framework for thermodynamics of reactions that combines accuracy and coverage},
-	volume = {28},
-	copyright = {All rights reserved},
-	issn = {1367-4803},
-	url = {https://academic.oup.com/bioinformatics/article/28/15/2037/237811},
-	doi = {10.1093/bioinformatics/bts317},
-	abstract = {Abstract.  Motivation: The laws of thermodynamics describe a direct, quantitative relationship between metabolite concentrations and reaction directionality. De},
+@article{liebermeister_model_2021,
+	title = {Model balancing: in search of consistent metabolic states and in-vivo kinetic constants},
+	copyright = {© 2021, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	shorttitle = {Model balancing},
+	url = {https://www.biorxiv.org/content/10.1101/2019.12.23.887166v2},
+	doi = {10.1101/2019.12.23.887166},
+	abstract = {{\textless}h3{\textgreater}Abstract{\textless}/h3{\textgreater} {\textless}p{\textgreater}Enzyme kinetic constants \textit{in vivo} are largely unknown, which limits the construction of large metabolic models. While model fitting, in principle, aims at fitting kinetic constants to measured metabolic fluxes, metabolite concentrations, and enzyme concentrations, the resulting estimation problems are typically non-convex and hard to solve, especially if models are large. Here we assume that metabolic fluxes are known and show how consistent kinetic constants, metabolite concentrations, and enzyme concentrations can be determined simultaneously from data. If one specific term is omitted – a term that penalises small enzyme concentrations – we obtain a convex optimality problem with a unique local optimum. The estimation method with or without this term, called model balancing, applies to models with a wide range of rate laws and accounts for thermodynamic constraints on kinetic constants and metabolite concentrations through thermodynamic forces. It can be used to estimate \textit{in-vivo} kinetic constants from omics data, to complete and adjust available data, or to construct plausible metabolic states with a predefined flux distribution. As a demonstrative case, we balance a model of \textit{E. coli} central metabolism with artificial or experimental data. The tests show what information about kinetic constants can be obtained from omics data, and reveal the practical limits of estimating \textit{in-vivo} kinetic constants.{\textless}/p{\textgreater}},
 	language = {en},
-	number = {15},
-	urldate = {2018-06-20},
-	journal = {Bioinformatics},
-	author = {Noor, Elad and Bar-Even, Arren and Flamholz, Avi and Lubling, Yaniv and Davidi, Dan and Milo, Ron},
-	month = aug,
-	year = {2012},
-	pages = {2037--2044}
-}
-
-@article{flamholz_equilibratorbiochemical_2011,
-	title = {{eQuilibrator}—the biochemical thermodynamics calculator},
-	volume = {40},
-	number = {D1},
-	journal = {Nucleic acids research},
-	author = {Flamholz, Avi and Noor, Elad and Bar-Even, Arren and Milo, Ron},
-	year = {2011},
-	pages = {D770--D775}
-}
-
-@article{noor_consistent_2013,
-	title = {Consistent {Estimation} of {Gibbs} {Energy} {Using} {Component} {Contributions}},
-	volume = {9},
-	copyright = {All rights reserved},
-	issn = {1553-7358},
-	url = {http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003098},
-	doi = {10.1371/journal.pcbi.1003098},
-	abstract = {Author Summary The metabolism of living organisms is a complex system with a large number of parameters and interactions. Nevertheless, it is governed by a strict set of rules that make it somewhat predictable and amenable to modeling. The laws of thermodynamics play a pivotal role by determining reaction feasibility and by governing the kinetics of enzymes. Here we introduce estimations for the standard Gibbs energy of reactions, with the best combination of accuracy and coverage to date. The estimations are derived using a new method which we denote component contribution. This method integrates multiple sources of information into a consistent framework that obeys the laws of thermodynamics, and provides a significant improvement in accuracy compared to previous genome-wide estimations of standard Gibbs energies. We apply and test our method on reconstructions of E. coli and human metabolism and, in addition, do our best to facilitate the use of these estimations in future models by providing open-source software that performs the integration in a streamlined process.},
-	number = {7},
-	urldate = {2017-12-13},
-	journal = {PLOS Computational Biology},
-	author = {Noor, Elad and Haraldsdóttir, Hulda S. and Milo, Ron and Fleming, Ronan M. T.},
-	month = jul,
-	year = {2013},
-	keywords = {Thermodynamics, Enzymes, Bioenergetics, Chemical equilibrium, Covariance, Decomposition, Linear regression analysis, Reactants},
-	pages = {e1003098},
-	file = {Full Text:/home/eladn/Zotero/storage/RFZK7C2P/Noor et al. - 2013 - Consistent Estimation of Gibbs Energy Using Compon.pdf:application/pdf}
-}
-
-@article{haraldsdottir_quantitative_2012,
-	title = {Quantitative {Assignment} of {Reaction} {Directionality} in a {Multicompartmental} {Human} {Metabolic} {Reconstruction}},
-	volume = {102},
-	issn = {0006-3495},
-	url = {http://www.sciencedirect.com/science/article/pii/S0006349512002639},
-	doi = {10.1016/j.bpj.2012.02.032},
-	abstract = {Reaction directionality is a key constraint in the modeling of genome-scale metabolic networks. We thermodynamically constrained reaction directionality in a multicompartmental genome-scale model of human metabolism, Recon 1, by calculating, in vivo, standard transformed reaction Gibbs energy as a function of compartment-specific pH, electrical potential, and ionic strength. We show that compartmental pH is an important determinant of thermodynamically determined reaction directionality. The effects of pH on transport reaction thermodynamics are only seen to their full extent when metabolites are represented as pseudoisomer groups of multiple protonated species. We accurately predict the irreversibility of 387 reactions, with detailed propagation of uncertainty in input data, and manually curate the literature to resolve conflicting directionality assignments. In at least half of all cases, a prediction of a reversible reaction directionality is due to the paucity of compartment-specific quantitative metabolomic data, with remaining cases due to uncertainty in estimation of standard reaction Gibbs energy. This study points to the pressing need for 1), quantitative metabolomic data, and 2), experimental measurement of thermochemical properties for human metabolites.},
-	number = {8},
-	urldate = {2018-07-27},
-	journal = {Biophysical Journal},
-	author = {Haraldsdóttir, H. S. and Thiele, I. and Fleming, R. M. T.},
-	month = apr,
-	year = {2012},
-	pages = {1703--1711},
-	file = {Haraldsdóttir et al. - 2012 - Quantitative Assignment of Reaction Directionality.pdf:/home/eladn/Zotero/storage/U8I74NBN/Haraldsdóttir et al. - 2012 - Quantitative Assignment of Reaction Directionality.pdf:application/pdf;mmc1.pdf:/home/eladn/Zotero/storage/HBDGV2EL/mmc1.pdf:application/pdf;ScienceDirect Snapshot:/home/eladn/Zotero/storage/333IVLX8/S0006349512002639.html:text/html}
+	urldate = {2021-06-08},
+	journal = {bioRxiv},
+	author = {Liebermeister, Wolfram and Noor, Elad},
+	month = mar,
+	year = {2021},
+	note = {Publisher: Cold Spring Harbor Laboratory
+Section: New Results},
+	pages = {2019.12.23.887166},
+	file = {Snapshot:/home/eladn/Zotero/storage/ZQER4W7Q/2019.12.23.html:text/html;Full Text PDF:/home/eladn/Zotero/storage/93Y6D7AC/Liebermeister and Noor - 2021 - Model balancing in search of consistent metabolic.pdf:application/pdf},
 }
